<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="我的">
            <menu>
                <item
                    android:id="@+id/nav_collection"
                    android:icon="@mipmap/collection"
                    android:title="@string/menu_collection" />
                <item
                    android:id="@+id/nav_clear"
                    android:icon="@mipmap/clear"
                    android:title="@string/menu_clear" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_night"
            android:icon="@mipmap/moon"
            android:title="@string/menu_night" />
        <item
            android:id="@+id/nav_day"
            android:icon="@mipmap/sun"
            android:title="@string/menu_day" />
        <!--        <item-->
        <!--            android:id="@+id/nav_gallery"-->
        <!--            android:icon="@drawable/ic_menu_gallery"-->
        <!--            android:title="@string/menu_gallery" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_slideshow"-->
        <!--            android:icon="@drawable/ic_menu_slideshow"-->
        <!--            android:title="@string/menu_slideshow" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_tools"-->
        <!--            android:icon="@drawable/ic_menu_manage"-->
        <!--            android:title="@string/menu_tools" />-->
    </group>



</menu>
