<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomsheet"
        android:background="@color/white"
        style="?attr/bottomSheetStyle"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:orientation="vertical">

        <!--        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"-->
        <!--        app:behavior_hideable="true"-->
        <!--        app:behavior_peekHeight="?android:attr/actionBarSize"-->
        <LinearLayout
            android:id="@+id/share_item"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/share_black_24dp"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/bottom_share"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/favorate_item"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackground">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/collection"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/bottom_favorate"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/blocking_item"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackground">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/eye"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/bottom_blocking"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>